# codepack

./: .gitignore  Cargo.toml  README.md  artifacts.json  changelog.rss  codepack-installer.ps1.txt  codepack-installer.sh.txt  dist-workspace.toml  index.html  oranda.json
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  web.yml
artifacts/: index.html
changelog/: index.html
changelog/v0.10.1/: index.html
changelog/v0.11.8/: index.html
changelog/v0.6.3/: index.html
changelog/v0.6.4/: index.html
changelog/v0.6.5/: index.html
changelog/v0.6.6/: index.html
changelog/v0.8.0/: index.html
changelog/v0.8.1/: index.html
changelog/v0.9.3/: index.html
changelog/v0.9.5/: index.html
docs/: CNAME  changelog.rss  index.html
docs/changelog/: index.html
docs/changelog/v0.6.3/: index.html
public/: changelog.rss  index.html
public/changelog/: index.html
src/: constants.rs  lib.rs  main.rs
tests/: filtering.rs  integration_tests.rs  unit_tests.rs
wix/: main.wxs
