[package]
name = "codedump"
version = "0.1.0"
edition = "2021"

[dependencies]
ignore = "0.4"
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"
clap = { version = "4.4", features = ["derive"] }
num_cpus = "1.16"
path-slash = "0.2"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = "0.3"
humansize = "2.1"
rayon = "1.10.0"
chrono = "0.4.38"
anyhow = "1.0.93"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3