[package]
name = "codepack"
version = "0.6.4"
edition = "2021"

repository = "https://github.com/JasonLovesDoggo/codepack"
authors = ["Jason Cameron <git@jasoncameron.dev>"]
license = "MIT"
description = "A *lightning-fast* tool that transforms a directory into a single, LLM-friendly text file, perfect for easy processing and analysis."
homepage = "https://codepack.jasoncameron.dev"

[package.metadata.wix]
upgrade-guid = "76DE8F50-9B4A-47A2-80C0-30C7074AFD81"
path-guid = "40D06AA7-224A-44A2-B663-F949EA3A47EC"
license = false
eula = false

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
anyhow = "1.0.93"
ignore = "0.4.23"
indicatif = "0.17.9"
prettytable = "0.10.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# Whether to consider the binaries in a package for distribution (defaults true)
dist = true
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.25.1"
# CI backends to support
ci = ["github"]
# Attestations to add to GitHub releases
github-attestations = true
# The installers to generate for each app
installers = ["msi", "powershell", "shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = true

